title: modification description : ajout code html

--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Un titre</h1>
+    <p>Paragraphe</p>
+    <ul>
+        <li>element1</li>
+        <li>element2</li>
+        <li>element2</li>
+    </ul>
 </body>
 </html>
-
-
-
-<!-- on a fait git init : index.html etait vide -->
-<!-- 2 : on a remplie le index.html avec du code html -->
-<!-- 3 : on a ajouter index.html dans le staging area -->
-
-<!-- INDEX.HTML VIDE -->
-<!-- INDEX.HTML REMPLIE -->
