--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Un titre</h1>
+    <h1>Exemple de titre</h1>
     <p>Paragraphe</p>
     <ul>
         <li>element1</li>
