--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Exemple de titre</h1>
-    <p>Paragraphe</p>
+    <p>exemple de paragraphe</p>
     <ul>
         <li>element1</li>
         <li>element2</li>
