--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     </ul>
     <button>Afficher Alert</button>
     <button>New button</button>
+    <script src="./app.js"></script>
 </body>
 </html>
